# klee

./: README.md  build.sh
.travis/: klee.sh  stp.sh
examples/loop-invariant/: 1loop.c  2loop.c  3loop.c  4loop.c  5loop.c  6loop.c  7loop.c  8loop.c  9loop.c  main.c
include/klee/: Constraints.h  ExecutionState.h  Interpreter.h  LoopAnalysis.h  klee.h  perf-contracts.h
include/klee/Core/: Interpreter.h
include/klee/Expr/: Expr.h
include/klee/util/: BitArray.h  ExprAnalysis.h  ExprAnalysisImpl.h  GetExprSymbols.h  Ref.h
lib/Basic/: KTest.cpp
lib/Core/: AddressSpace.cpp  AddressSpace.h  ExecutionState.cpp  ExecutionState.h  Executor.cpp  Executor.cpp.save  Executor.h  Memory.cpp  Memory.h  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h
lib/Expr/: CMakeLists.txt  ExprPPrinter.cpp  GetExprSymbols.cpp
lib/Module/: IntrinsicCleaner.cpp  KModule.cpp
lib/Solver/: STPSolver.cpp
runtime/FreeStanding/: Makefile.cmake.bitcode
runtime/Intrinsic/: Makefile.cmake.bitcode  memchr.c
runtime/POSIX/: fd_init.c
runtime/Runtest/: intrinsics.c
scripts/: plot-uvs.sh  process-traces.sh  stateless_perf.sh  stitch-traces.sh  trace.sh
scripts/trace_scripts/: demarcate_trace.py  formal_cache.py  print_addresses.py  process_trace.py  process_trace.sh  stateless_perf.py  stateless_stats.py  trace_miss_rates.py
scripts/trace_scripts/fn_lists/: dpdk_fns.txt  stateful_fns.txt  time_fns.txt  verif_fns.txt
test/Feature/: AliasFunctionUndo.c  ForgetAll.c
test/Feature/LoopInvariant/: Array.c  ArraySymbIndex.c  Double.c  IndependentVars.c  Nested.c  NestedAnalyseBoth.c  (+3 more)
tools/check-call-path-compatibility/: CMakeLists.txt  check-call-path-compatibility.cpp
tools/klee/: main.cpp
tools/ktest-dehavoc/: CMakeLists.txt  ktest-dehavoc.cpp
tools/ktest-tool/: ktest-tool
tools/stitch-perf-contract/: CMakeLists.txt  stitch-perf-contract.cpp
trace-instructions/: .gitignore  Makefile  pin-trace.cpp
(+10 files in other folders)
